@@ -16,7 +16,4 @@
    OR FIX: Replace ascii converter (reg names) with better match. (At least
    on Tyros) (V 0.3 ??)
 
- * Fix new bug: Creation of man pages doesn't work because help2man command
-   cannot retrieve --help information ???
-
  * Nice manual (far beyond man page) with lots of pictures (after V 0.3)
