@@ -1,3 +1,10 @@
+2008-09-29  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>
+
+ * Fixed bug which prevented man page creation by catching the insulting
+   exception and by changing the English man page's locale from generic "en"
+   to valid "en_US".
+
+
 2008-09-28  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>
 
  * Fixed bug of missing translations under MS Windows.
